          to let me take this on.
        * Applied patch from RT http://rt.cpan.org/Public/Bug/Display.html?id=42693
          This fixes the "Can't store CODE items" errors
        * Now requires Test::Warn 0.11 (fixes errors in t/002-bad-custom-cache.t)
        * Moved development to GitHub: http://github.com/oalders/www-mechanize-cached/tree/master

1.32    Sun Apr 11 22:19:49 CDT 2004

        [ENHANCEMENTS]
        * Added the $mech->is_cached() method.

        * Verified that reusing an existing cache gives you the pages back.

        [INTERNAL]
        * Now requires WWW::Mechanize 1.00, because previous versions
          goofed up the HTTP headers on some requests.


1.30    Sun Mar 14 02:51:19 CST 2004

        No new features.

        [FIXED]
        * Fixed stupid configuration problem in t/bad-cache-test.t.
          If you got 1.28 installed OK, you don't need 1.30.

1.28    Sat Mar 13 22:05:26 CST 2004

        [THINGS THAT WILL BREAK YOUR CODE]
        * The C<cache> parm to the constructor is no longer a set
          of parms to specify how the cache will be initialized.  It
          must now be a fully-initialized cache object, probably in
          the Cache::Cache hierarchy.

        * Existing caches will not work, because I changed the
          directory that they get written to.  It used to go into
          /tmp/FileCache/WWW::Mechanize::Cached, but now will go into
          /tmp/FileCache/www-mechanize-cached.  This is so the Windows
          folks can use the module, too.

          However, if you want to create your own cache object that
          writes to /tmp/FileCache/WWW::Mechanize::Cached, for
          compatibility, you can create it and pass it in.

        [ENHANCEMENTS]
        * You can now specify your own Cache::Cache object to pass
          into the constructor.

1.26    Sun Feb 29 23:59:48 CST 2004

        [FIXES]
        * Removed a duplicate $key.  Cleaned up some of the internal code,